@@ -186,12 +186,14 @@ class Logs(QtWidgets.QTextBrowser):
             return
         if msg.startswith("frame="):
             try:
-                output = []
-                for i in (x.strip().split() for x in msg.split("=")):
-                    output.extend(i)
-
-                frame = dict(zip(output[0::2], output[1::2]))
-
+                frame = {}
+                output = [i for i in (x.strip().split() for x in msg.split("="))]
+                output[-1].append([])  # no final value
+                for i in range(0, len(output) - 1):
+                    frame[output[i][-1]] = output[i + 1][:-1]
+                for k in frame:
+                    if len(frame[k]) == 1:
+                        frame[k] = frame[k][0]
                 self.status_panel.speed.emit(f"{frame.get('time', '')}|{frame.get('speed', '').rstrip('x')}")
                 self.status_panel.bitrate.emit(frame.get("bitrate", ""))
             except Exception:
